opam-version: "2.0"
version: "3.1"
maintainer:   "Thibaut Gudin <tgudin@besport.com>"
authors:      "Thibaut Gudin <tgudin@besport.com>"
homepage:     "https://github.com/besport/ocaml-mixpanel"
bug-reports:  "https://github.com/besport/ocaml-mixpanel/issues"
dev-repo:     "git+https://github.com/besport/ocaml-mixpanel"
license:      "LGPL-2.1 with OCaml linking exception"
description: "Binding to the mixpanel plugin using gen_js_api"
synopsis: "Binding to the mixpanel plugin using gen_js_api"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.08.0" }
  "gen_js_api"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "lwt_ppx"
  ]
